<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgProveedor"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:src="@drawable/plomero1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/nombreProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/plomero_1_name"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/descripcionProveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plomero_1_descripcion"
                android:textColor="#555" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCosto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/costo" />

            <TextView
                android:id="@+id/proveedorPromedio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="dslaj" />

            <Button
                android:id="@+id/btnProveedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:theme="@style/PrimaryFlatButton" />

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/idProveedor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</androidx.cardview.widget.CardView>