<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Solicitud">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenProveedor"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="150dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:id="@+id/nombreProveedor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="12dp"
                                android:text="@string/plomero_1_name"
                                android:textColor="#000"
                                android:textSize="28sp" />

                            <TextView
                                android:id="@+id/costoProveedor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="@string/plomero_1_precio"
                                android:textColor="@color/gold" />

                            <TextView
                                android:id="@+id/descripcionProveedor"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/plomero_1_descripcion"
                                android:textColor="#555" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textMultiLine"
                                android:text="@string/servicios"
                                android:textColor="#555"
                                android:textStyle="italic" />


                        </LinearLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerOfertas"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </androidx.recyclerview.widget.RecyclerView>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end">

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="solicitarOnClick"
                                android:text="@string/solicitar"
                                android:theme="@style/PrimaryFlatButton" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </FrameLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>